# rc_caohongwei

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api_notify.md  fly.toml  providers.example.yaml  providers.yaml  pyproject.toml
app/: main.py
app/api/: _listing.py  routes_dlq.py  routes_health.py  routes_metrics.py  routes_notifications.py  routes_providers.py  schemas.py
app/core/: config.py  db.py  logging.py  metrics.py  providers.py
app/delivery/: backoff.py  breaker.py  classifier.py  dispatcher.py  renderer.py  worker.py
app/models/: notification.py
docs/: AI-USAGE.md  DEPLOY-HF.md  demo.md
openspec/changes/add-console-read-api/: design.md  proposal.md  tasks.md
openspec/changes/add-frontend-console/: design.md  proposal.md  tasks.md
openspec/changes/init-notification-mvp/: design.md  proposal.md  tasks.md
tests/: conftest.py  test_backoff.py  test_breaker.py  test_classifier.py  test_delivery_e2e.py  test_intake_api.py  test_listing_api.py  test_metrics_module.py  test_metrics_summary_api.py  test_providers_api.py  test_renderer.py
tools/: mock_provider.py
web/: .npmrc  README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/_dashboard/: metric-card.tsx  provider-matrix.tsx  trend-chart.tsx
web/components/: animated-number.tsx  code-block.tsx  empty-state.tsx  inline-error.tsx  page-transition.tsx  providers.tsx  section.tsx  sidebar.tsx  skeletons.tsx  stagger-list.tsx  status-badge.tsx  theme-toggle.tsx  topbar.tsx
web/lib/: hooks.ts  template.ts  types.ts
(+13 files in other folders)
